--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,157 @@
     <string name="app_name">Termux+</string>
     <string name="app_description">Modular AI-Enhanced Terminal for Android</string>
     <string name="settings_title">Termux+ Settings</string>
+    <string name="claude_setup_title">Claude Code Setup</string>
+    <string name="file_picker_title">Select Files</string>
+    
+    <!-- Tab and navigation -->
+    <string name="new_tab_desc">Create new terminal tab</string>
+    <string name="claude_actions_desc">Claude Code quick actions</string>
+    <string name="close_tab">Close Tab</string>
+    <string name="new_tab">New Tab</string>
+    <string name="tab_layout_desc">Terminal tabs for different projects and tasks</string>
+    
+    <!-- Claude Code integration -->
+    <string name="claude_detected">Claude Code Detected!</string>
+    <string name="claude_thinking">Claude is thinking...</string>
+    <string name="claude_generating">Generating code...</string>
+    <string name="claude_analyzing">Analyzing project...</string>
+    <string name="claude_error">Claude Error</string>
+    <string name="claude_success">Operation completed successfully</string>
+    <string name="claude_status_icon_desc">Claude AI status indicator</string>
+    <string name="claude_progress_desc">Claude AI operation progress</string>
+    
+    <!-- File operations -->
+    <string name="file_picker_desc">Pick files for Claude context</string>
+    <string name="file_created">File created</string>
+    <string name="file_modified">File modified</string>
+    <string name="file_deleted">File deleted</string>
+    
+    <!-- Quick actions -->
+    <string name="voice_input_desc">Voice input for Claude</string>
+    <string name="quick_commands_desc">Quick command templates</string>
+    <string name="project_info_desc">Project information</string>
+    
+    <!-- Gestures and help -->
+    <string name="gesture_hint_text">Swipe down to stop Claude\nDouble-tap for history\nLong press for selection</string>
+    <string name="stop_claude">Stop Claude Operation</string>
+    <string name="claude_history">Claude Message History</string>
+    
+    <!-- Settings -->
+    <string name="enable_gboard">Enable Gboard Autocomplete</string>
+    <string name="gboard_desc">Allow Gboard predictions in terminal</string>
+    <string name="claude_model">Claude Model</string>
+    <string name="claude_model_desc">Choose your preferred Claude model</string>
+    <string name="token_limit">Token Limit</string>
+    <string name="token_limit_desc">Maximum tokens per conversation</string>
+    <string name="auto_suggestions">Auto Suggestions</string>
+    <string name="auto_suggestions_desc">Show AI suggestions while typing</string>
+    
+    <!-- Project types -->
+    <string name="project_nodejs">Node.js Project</string>
+    <string name="project_python">Python Project</string>
+    <string name="project_rust">Rust Project</string>
+    <string name="project_go">Go Project</string>
+    <string name="project_java">Java Project</string>
+    <string name="project_general">General Terminal</string>
+    
+    <!-- Error messages -->
+    <string name="error_claude_not_installed">Claude Code CLI not found. Please install @anthropic/claude-code first.</string>
+    <string name="error_permission_denied">Permission denied. Please grant storage permissions.</string>
+    <string name="error_network">Network error. Check your internet connection.</string>
+    <string name="error_auth_failed">Authentication failed. Please check your Claude credentials.</string>
+    
+    <!-- Progress and status -->
+    <string name="progress_authenticating">Authenticating with Claude...</string>
+    <string name="progress_analyzing">Analyzing your project...</string>
+    <string name="progress_generating">Generating code...</string>
+    <string name="progress_complete">Complete!</string>
+    
+    <!-- Menu items -->
+    <string name="menu_settings">Settings</string>
+    <string name="menu_help">Help</string>
+    <string name="menu_about">About</string>
+    <string name="menu_claude_setup">Claude Setup</string>
+    
+    <!-- Dialog buttons -->
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="apply">Apply</string>
+    <string name="reset">Reset</string>
+    
+    <!-- New tab dialog -->
+    <string name="new_tab_dialog_title">Create New Terminal Tab</string>
+    <string name="tab_name_hint">Tab name (e.g., my-project)</string>
+    <string name="working_directory_hint">Working directory</string>
+    <string name="browse_directory">Browse...</string>
+    <string name="project_type_label">Project Type</string>
+    
+    <!-- Claude help -->
+    <string name="claude_help_title">Claude Code Help</string>
+    <string name="claude_help_desc">Get help with Claude Code features and usage</string>
+    <string name="claude_help_content">
+        <![CDATA[
+        <h3>Getting Started with Claude Code</h3>
+        <p>1. Install Claude Code CLI:</p>
+        <code>npm install -g @anthropic/claude-code</code>
 
-    <!-- ... (rest of the file) ... -->
+        <p>2. Start Claude Code:</p>
+        <code>claude code</code>
 
+        <h3>Mobile Gestures</h3>
+        <p>• <b>Swipe down</b> - Stop Claude operation</p>
+        <p>• <b>Double tap</b> - Show message history</p>
+        <p>• <b>Long press</b> - Enhanced text selection</p>
+        <p>• <b>Shake device</b> - Quick clear (/clear)</p>
+
+        <h3>Quick Actions</h3>
+        <p>• Tap 📁 to pick files for @-tagging</p>
+        <p>• Tap 🎤 for voice input</p>
+        <p>• Tap ⚡ for quick commands</p>
+        <p>• Tap ℹ️ for project info</p>
+
+        <h3>Tab Management</h3>
+        <p>• Create multiple tabs for different projects</p>
+        <p>• Each tab has independent Claude sessions</p>
+        <p>• Auto-detects project types and shows appropriate icons</p>
+        ]]>
+    </string>
+
+    <!-- Detailed Claude help strings -->
+    <string name="claude_getting_started_help">
+        1. Install Claude Code CLI:\n   npm install -g @anthropic/claude-code\n\n
+        2. Start Claude Code:\n   claude code\n\n
+        3. Ask Claude to help with your project\n\n
+        4. Use @-tagging to reference files in your project
+    </string>
+
+    <string name="claude_mobile_gestures_help">
+        • Swipe down - Stop Claude operation\n
+        • Double tap terminal - Show Claude history\n
+        • Triple tap terminal - Activate voice input\n
+        • Long press tab - Show close button\n
+        • Swipe left/right on terminal - Navigate between tabs\n
+        • Long press New Tab FAB - Toggle bottom panel
+    </string>
+
+    <string name="claude_quick_commands_help">
+        • /help - Show Claude help\n
+        • /clear - Clear terminal\n
+        • /tokens - Check token usage\n
+        • /stop - Stop current operation\n
+        • /project - Analyze project structure
+    </string>
+
+    <string name="claude_tips_tricks_help">
+        • Claude will analyze your project context automatically\n
+        • Use @filename to reference specific files\n
+        • Claude can generate code, debug issues, and explain concepts\n
+        • Check Claude status overlay for progress updates\n
+        • Claude operations are project-specific per tab
+    </string>
+    
     <!-- About text -->
     <string name="about_text">
         <![CDATA[
